--- a/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
+++ b/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
@@ -47,8 +47,8 @@
                                             <wm-grid-column binding="vendor.companyName" caption="Primary Vendor" type="string" readonly="true" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==&quot;Standard&quot;"></wm-grid-column>
                                             <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                            <wm-grid-action key="customButton" display-name="New Form" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Forms" action="Widgets.dialogNewForm.open()" shortcutkey="" disabled="false"
-                                            position="header"></wm-grid-action>
+                                            <wm-grid-action key="customButton1" display-name="New Form" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Forms" action="Widgets.dialogNewForm.open()" shortcutkey="" disabled="false" position="header"></wm-grid-action>
+                                            <wm-grid-action key="customButton2" display-name="New Form" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Forms" action="Widgets.dialogNewForm.open()" shortcutkey="" disabled="false" position="footer"></wm-grid-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="Variables.goToPage_Forms.invoke()" disabled="false"></wm-grid-row-action>
                                         </wm-grid>
                                     </wm-gridcolumn>
