updated text to "Require" digital signature, plus hint text Files modified - [EditForm.html]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -129,8 +129,8 @@
                                                                 <wm-form-field name="attachments" displayname="Allow Attachments" show="true" primary-key="false" generator="assigned" key="attachments" type="boolean" widget="checkbox" placeholder="" hint="This enables attaching multiple documents to a form."></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn58" padding="unset 1em unset unset">
-                                                                <wm-form-field name="digitalSignatures" displayname="Allow Digital Signatures" show="true" primary-key="false" generator="assigned" key="digitalSignatures" type="boolean" widget="checkbox" placeholder=""
-                                                                hint="This enables a digital signature to be collected as part of the form process."></wm-form-field>
+                                                                <wm-form-field name="digitalSignatures" displayname="Require Digital Signature" show="true" primary-key="false" generator="assigned" key="digitalSignatures" type="boolean" widget="checkbox" placeholder=""
+                                                                hint="This option requires that the user provide a digital signature when submitting the form to the municipality."></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow38_1" padding="unset unset 1em unset">
