--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -50,15 +50,15 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn4" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageMunicipalityVendors.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid4">
-                                <wm-gridrow height="100%" name="gridrow5">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn10" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile8" on-click="Variables.goToPage_MunicipalityProjects.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid9">
+                                <wm-gridrow height="100%" name="gridrow12">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" class="col-xs-3" name="gridcolumn26">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-building" name="icon8"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn11" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Vendors" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.VendorsCountForMunicipalities.dataSet[$i].vendorsCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn27">
+                                        <wm-label caption="Projects" class="p" fontsize="1.5" fontunit="em" name="label16_1"></wm-label>
+                                        <wm-label caption="bind:Variables.CountOfMunicipalityProjects.dataSet[$i].count" fontsize="3" fontunit="em" class="p" name="label17"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -129,21 +129,21 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile8" on-click="Variables.goToPage_MunicipalityProjects.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid9">
-                                <wm-gridrow height="100%" name="gridrow12">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" class="col-xs-3" name="gridcolumn26">
-                                        <wm-icon iconsize="3em" iconclass="wi wi-building" name="icon8"></wm-icon>
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageMunicipalityVendors.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid4">
+                                <wm-gridrow height="100%" name="gridrow5">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn10" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn27">
-                                        <wm-label caption="Projects" class="p" fontsize="1.5" fontunit="em" name="label16_1"></wm-label>
-                                        <wm-label caption="bind:Variables.CountOfMunicipalityProjects.dataSet[$i].count" fontsize="3" fontunit="em" class="p" name="label17"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn11" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Vendors" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.VendorsCountForMunicipalities.dataSet[$i].vendorsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
