--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -127,7 +127,7 @@
                                     </wm-layoutgrid>
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneTASKS" title="TASKS">
-                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectTasksData.dataSet" navigation="Classic" name="gridTasks" confirmdelete="You are about to delete a milestone.  All related tasks will also be deleted.  Are you sure you would like to continue?"
+                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectTasksData.dataSet" navigation="Classic" name="gridTasks" confirmdelete="Warning! Deleting this Task/Milestone will also delete all associated Tasks/Milestones that have this record selected as &quot;Predecessor&quot;. Would you like to proceed?"
                                     nodatamessage="No Tasks found." filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
                                         <wm-grid-column binding="name" caption="Title" type="string" primary-key="false" generator="assigned" col-ng-class="{'milestone-class':row.type=='Milestone'}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="type" caption="Type" type="string" generator="assigned" col-ng-class="{'milestone-class':row.type==&quot;Milestone&quot;}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
