InspectionsDevDataEntry New files added - [InspectionsDevDataEntry] Files modified - [leftnav.html,pages-config.json,DevFormDataEntry.js,DevFormDataEntry.variables.json,DevFormDataEntry.html,app.variables.json]

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -33,5 +33,8 @@
         <wm-nav-item name="nav_item9_1">
             <wm-anchor name="anchor9_1" iconclass="wi wi-file" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
+        <wm-nav-item name="nav_item12">
+            <wm-anchor name="anchor12" iconclass="wi wi-file" caption="Inspections DevDataEntry" on-click="Variables.goToPage_InspectionsDevDataEntry.invoke()"></wm-anchor>
+        </wm-nav-item>
     </wm-nav>
 </wm-partial>
